--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next": "14.2.16",
     "next-themes": "latest",
     "react": "^18",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
@@ -60,8 +61,9 @@
     "@auth/core": "latest",
     "nodemailer": "latest",
     "next-auth": "latest",
+    "@vercel/blob": "latest",
     "jsonwebtoken": "latest",
-    "@vercel/blob": "latest"
+    "jose": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
